style.css
/*
background-day
fill: #233963;

toggle-day
fill: #314c7c;

toggle-night
fill: #7bb4d5;

dark-blue
fill: #314c7c;

blue
fill: #528fbc;

mobile blue
fill: #2577a9;

mobile light-blue
fill: #57acd1;

light-grey
fill: #d6d7d8;

lightest-grey
fill: #e5e5e5;

snow-white
fill: #e9e9e9;
*/

@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');

/* CSS Reset */
div {
  font-size: 0;
  line-height: 0;
}

/* Fill colors for houses*/
.dark-blue {
  fill: salmon;
}
.blue {
  fill: pink;
}
.light-grey {
  fill: beige;
}
.lightest-grey {
  fill: #e5e5e5;
}

/* Global styles */
html {
  font-size: 62.5%;
}
html, body{
  margin:0;
  width: 100%;
}

body {
  background: #7bb4d5;
  -webkit-transition: background-color .5s ease-out;
  transition: background-color .5s ease-out;
}

/* Typography */
h1 {
  font-family: 'Source Serif Pro', serif;
  font-size: 3.2rem;
  line-height: 1em;
  font-weight: 700;
  color: #000000;
  margin-top: 0;
  margin-bottom: 12px;
}

@media only screen and (min-width: 768px) {
  h1 {
    font-size: 8.0rem;
  }
}

@media only screen and (min-width: 1280px) {
  h1 {
    font-size: 7.2rem;
  }
}

p {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 1.6rem;
  line-height: 1.5;
}

@media only screen and (min-width: 768px) {
  p {
    font-size: 2.4rem;
  }
}

/* Day/Night Toggle */
body.night {
  background: #233963;
}

#dayNightControls {
  display: flex;
  justify-content: flex-end;
  padding: 40px 40px 100px;
}

@media only screen and (min-width: 1280px) {
  #dayNightControls {
    padding: 60px;
  }
}

.dayNightToggle {
  z-index: 1000;
}

#nightIcon {
  position: absolute;
  width: 20px;
  height: 20px;
  margin: 9px;
  fill: white;
  z-index: 1;
  top: -1px;
  left: -1px;
}

#dayIcon {
  position: absolute;
  width: 20px;
  height: 20px;
  margin: 9px;
  fill: white;
  z-index: 1;
  top: -1px;
  right: -1px;
}

#dayIcon, #nightIcon {
  cursor: pointer;
}

.toggle {
  display: none;
}

.toggle, .toggle:after, .toggle:before, .toggle *, .toggle *:after, .toggle *:before, .toggle + .toggle-button {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.toggle::-moz-selection, .toggle:after::-moz-selection, .toggle:before::-moz-selection, .toggle *::-moz-selection, .toggle *:after::-moz-selection, .toggle *:before::-moz-selection, .toggle + .toggle-button::-moz-selection {
  background: none;
}

.toggle::selection, .toggle:after::selection, .toggle:before::selection, .toggle *::selection, .toggle *:after::selection, .toggle *:before::selection, .toggle + .toggle-button::selection {
  background: none;
}

.toggle + .toggle-button {
  outline: 0;
  display: inline-block;
  width: calc(80px + 10px);
  height: 40px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: 2px solid #314c7c;
  border-radius: 20px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

body.night .toggle + .toggle-button {
  border: 2px solid #7bb4d5;
}

.toggle + .toggle-button:after {
  position: relative;
  display: block;
  content: "";
  width: 38px;
  height: 38px;
  top: -1px;
}

.toggle + .toggle-button:after {
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  background: #314c7c;
  content: "";
  border-radius: 19px;
  left: -1px;
}

body.night .toggle + .toggle-button:after {
  background: #7bb4d5;
}

.toggle:checked + .toggle-button:after {
  left: calc(50% + 5px + 1px);
}

/* Sun and moon */
#celestial {
  position: absolute;
  left: 20px;
  top: 80px;
}
@media only screen and (min-width: 768px) {
  #celestial {
    left: calc(100px * 0.625);
    top: calc(120px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  #celestial {
    left: 100px;
    top: 120px;
  }
}

.sun, .moon {
  position: absolute;
  width: calc(200px * 0.3725);
  height: calc(200px * 0.3725);
  -webkit-animation-duration: 0.7s;
  animation-duration: 0.7s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
@media only screen and (min-width: 768px) {
  .sun, .moon {
    width: calc(200px * 0.625);
    height: calc(200px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .sun, .moon {
    width: 200px;
    height: 200px;
  }
}

.moon {
  top: -320px;
}

.sun {
  top: 0;
}

.night .sun {
  top: -320px;
}

.night .moon {
  top: 0;
}

/* Building of houses */
#building {
  padding: 0;
  position: relative;
  margin: 0 auto;
  width: calc((510px * 0.3725) + 53px);
  height: calc(1760px * 0.3725);
}
@media only screen and (min-width: 768px) {
  #building {
    width: calc(1020px * 0.625);
    height: calc(1760px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  #building {
    width: 1020px;
    height: 1760px;
  }
}

.level {
  position: absolute;
  width: calc(510px * 0.3725);
  height: calc(1760px * 0.3725);
}
@media only screen and (min-width: 768px) {
  .level {
    width: calc(510px * 0.625);
    height: calc(1760px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level {
    width: 510px;
    height: 1760px;
  }
}

.level1 {
  z-index: 1;
  margin: 0;
}
@media only screen and (min-width: 768px) {
  .level1 {
    margin-left: calc(223px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level1 {
    margin-left: 223px;
  }
}
.level2 {
  z-index: 2;
  margin-left: 53px;
}
@media only screen and (min-width: 768px) {
  .level2 {
    margin-left: calc(366px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level2 {
    margin-left: 366px;
  }
}
.level3 {
  z-index: 3;
  margin: 0;
}
@media only screen and (min-width: 768px) {
  .level3 {
    margin-left: 0;
  }
}
.level4 {
  z-index: 4;
  margin-left: 53px;
}
@media only screen and (min-width: 768px) {
  .level4 {
    margin-left: calc(510px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level4 {
    margin-left: 510px;
  }
}

/* House color fills - mobile */
.house .roof {
  fill: #314c7c;
}

/* light-grey */
.level1 .house .front,
.level3 .house .side,
.level4 .house .side,
.sill,
.light {
  fill: #d6d7d8;
}

/* mobile light-blue */
.level1 .house .side,
.level2 .house .front,
.level3 .house .front,
.level1 .sill,
.level1 .light {
  fill: #57acd1;
}

/* mobile blue */
.level2 .house .side,
.level4 .house .front {
  fill: #2577a9;
}

/* House color fills - tablet and desktop */
@media only screen and (min-width: 768px) {
  /* light-grey */
  .level1 .house .side,
  .level2 .house .side,
  .level4 .house .side,
  .level1 .light,
  .level1 .sill {
    fill: #d6d7d8;
  }

  /* blue */
  .level1 .house .front,
  .level2 .house .front,
  .level3 .house .side,
  .level4 .house .front {
    fill: #528fbc;
  }
}

.window {
  position: absolute;
  background: #314c7c;
  overflow: hidden;
  z-index: -1;
  width: 58px;
  height: 58px;
}
@media only screen and (min-width: 768px) {
  .window {
    width: calc(156px * 0.625);
    height: calc(156px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .window {
    width: 156px;
    height: 156px;
  }
}

.level1 .window {
  left: 22px;
  top: 66px;
}
@media only screen and (min-width: 768px) {
  .level1 .window {
    left: calc(60px * 0.625);
    top: calc(177px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level1 .window {
    left: 60px;
    top: 177px;
  }
}
.level2 .window {
  left: 108px;
  top: 202px;
}
@media only screen and (min-width: 768px) {
  .level2 .window {
    left: calc(294px * 0.625);
    top: calc(547px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level2 .window {
    left: 294px;
    top: 547px;
  }
}
.level3 .window {
  left: 22px;
  top: 340px;
}
@media only screen and (min-width: 768px) {
  .level3 .window {
    left: calc(60px * 0.625);
    top: calc(910px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level3 .window {
    left: 60px;
    top: 910px;
  }
}
.level4 .window {
  left: 108px;
  top: 474px;
}
@media only screen and (min-width: 768px) {
  .level4 .window {
    left: calc(294px * 0.625);
    top: calc(1274px * 0.625);
  }
}
@media only screen and (min-width: 1280px) {
  .level4 .window {
    left: 294px;
    top: 1274px;
  }
}

/* Window scene */
.window img {
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 1280px) {
  .night .window img {
    opacity: 0;
  }
}

.night-scene {
  display: none;
}

.night .day-scene {
  display: none;
}

.night .night-scene {
  display: block;
}

/* Window light */
@media only screen and (min-width: 1280px) {
  .light {
    opacity: 0;
  }
}

/* Snow hill */
.snowhill {
  position: relative;
  margin-top: -60px;
}
@media only screen and (min-width: 1280px) {
  .snowhill {
    margin-top: -60px;
  }
}

/* Snow field */
.snowfield {
  position: relative;
  background: #e9e9e9;
  z-index: 5;
  padding: calc(200px * 0.3725) 0;
  margin-top: -1px;
}
@media only screen and (min-width: 768px) {
  .snowfield {
    padding: calc(200px * 0.625) 0;
  }
}
@media only screen and (min-width: 1280px) {
  .snowfield {
    padding: 200px 0;
  }
}

/* Greetings */
.greetings {
  width: calc((510px * 0.3725) + 53px);
  margin: 0 auto;
}

@media only screen and (min-width: 768px) {
  .greetings {
    width: 600px;
    margin: 0 auto;
  }
}

@media only screen and (min-width: 1280px) {
  .greetings {
    max-width: 1020px;
  }
}

.text {
  width: 100%;
}
@media only screen and (min-width: 768px) {
  .text {
    width: 600px;
  }
}

.logo {
  width: calc(200px * 0.3725);
  margin-top: calc(100px * 0.3725);
}
@media only screen and (min-width: 768px) {
  .logo {
    width: 200px;
    margin-top: 100px;
  }
}

/* Trees */
.tree {
  display: none;
}
@media only screen and (min-width: 1280px) {
  .tree {
    display: block;
  }
}

.tree1 {
  width: 200px;
  position: absolute;
  top: -260px;
  left: 40px;
}
.tree2 {
  width: 200px;
  position: absolute;
  top: -260px;
  right: 40px;
}

.tree3 {
  width: 280px;
  position: absolute;
  bottom: 200px;
  right: 150px;
}

/* Animation*/
.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

/* Window light flash animation */
@-webkit-keyframes flash {
  0% {
    opacity: 0;
  }

  35% {
    opacity: 0.3;
  }

  25%, 75%, 100% {
    opacity: 1;
  }
}

@keyframes flash {
  0% {
    opacity: 0;
  }

  35% {
    opacity: 0.3;
  }

  25%, 75%, 100% {
    opacity: 1;
  }
}

.flash {
  -webkit-animation-name: flash;
  animation-name: flash;
}


/* Sun and moon slide up and down switch animation */
@keyframes slideOut {
  0% {
    top: 0;
  }

  50%, 100% {
    top: -320px;
  }
}

@keyframes slideIn {
  0%, 60% {
    top: -320px;
  }

  100% {
    top: 0;
  }
}

.slideOutAndIn .moon{
  animation-name: slideOut;
}

.slideOutAndIn .sun{
  animation-name: slideIn;
}

.night .slideOutAndIn .moon{
  animation-name: slideIn;
}

.night .slideOutAndIn .sun{
  animation-name: slideOut;
}

